tests/baselines/reference/downlevelLetConst4.errors.txt
//// [tests/cases/compiler/downlevelLetConst4.ts] ////

downlevelLetConst4.ts(1,7): error TS1155: 'const' declarations must be initialized.


==== downlevelLetConst4.ts (1 errors) ====
    const a: number
          ~
!!! error TS1155: 'const' declarations must be initialized.